[gd_scene load_steps=4 format=3 uid="uid://c42pbenlfpvpk"]

[ext_resource type="Script" uid="uid://cs5s1e6pryi44" path="res://Scripts/AIController.gd" id="1_p0lc4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o0jsi"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_15xml"]

[node name="AIController" type="Node"]
script = ExtResource("1_p0lc4")

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InfoPanel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 26.0
offset_top = 116.0
offset_right = 532.0
offset_bottom = 489.0

[node name="DebugLabel" type="RichTextLabel" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -172.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
scroll_following = true

[node name="Panel" type="Panel" parent="CanvasLayer/InfoPanel/DebugLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StatsLabel" type="RichTextLabel" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
bbcode_enabled = true

[node name="PercentagesLabel" type="RichTextLabel" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 506.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_o0jsi")
bbcode_enabled = true

[node name="CloseButton" type="Button" parent="CanvasLayer/InfoPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="InfoButton" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(100, 40)
offset_left = 26.0
offset_top = 72.0
offset_right = 141.0
offset_bottom = 112.0
text = "AI Panel"

[node name="InfoKeyPanel" type="Panel" parent="CanvasLayer/InfoButton"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/InfoButton/InfoKeyPanel"]
layout_mode = 0
offset_left = 0.5
offset_top = -2.0
offset_right = 20.5
offset_bottom = 22.0
text = "F1"
label_settings = SubResource("LabelSettings_15xml")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 1

[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/InfoPanel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer/InfoButton" to="." method="_on_info_button_pressed"]
